manifests/quizapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizapp
  namespace: quizapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quizapp
  template:
    metadata:
      labels:
        app: quizapp
    spec:
      containers:
      - name: quizapp
        image: 266735817823.dkr.ecr.eu-west-2.amazonaws.com/quiz-app:latest
        ports:
        - containerPort: 3000
