manifests/quizapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizapp-service
  namespace: quizapp
spec:
  type: ClusterIP
  selector:
    app: quizapp
  ports:
    - port: 80
      targetPort: 3000
